tests/bad_type_mismatch.stderr
tests/bad_type_mismatch.hop:3:9: error: HOP2004: type mismatch
